<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.CreateAccount">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="24dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.Termsetter.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Registration"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Termsetter.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:hint="Your name"
            app:errorEnabled="false"
            app:helperTextEnabled="true"
            app:helperText="Must only contain uppercase and lowercase letters"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSetName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Termsetter.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:hint="Account ID"
            app:errorEnabled="true"
            app:helperTextEnabled="false"
            app:helperText="Must begin with a letter"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSetID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Termsetter.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:hint="Password"
            app:errorEnabled="true"
            app:helperTextEnabled="false"
            app:helperText="Min. 6 characters, includes letters and at least 1 number"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_https_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Termsetter.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:inputType="textPassword"
            android:hint="Confirm Password"
            app:errorEnabled="true"
            app:helperTextEnabled="false"
            app:helperText="Must match password"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_https_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextConfirmAPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Termsetter.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:hint="Email"
            app:errorEnabled="true"
            app:helperTextEnabled="false"
            app:helperText="Must be a @myumanitoba.ca email address"
            app:startIconDrawable="@drawable/ic_baseline_mail_outline_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Termsetter.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:hint="Phone"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:helperTextEnabled="false"
            app:helperText="Must be of format XXXYYYZZZZ"
            app:startIconDrawable="@drawable/ic_baseline_phone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Termsetter.ConfirmButton"
            android:id="@+id/buttonConfirmAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClickConfirmButton"
            android:text="CREATE ACCOUNT"
            android:textStyle="normal"/>
    </LinearLayout>


</ScrollView>