<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".Presentation.AccountManageProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.Termsetter.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/btn_account_management_manage_profile"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/contentProfilePrompts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/promptName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_manage_profile_prompt2" />

                <TextView
                    android:id="@+id/promptStudentNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_manage_profile_prompt3" />

                <TextView
                    android:id="@+id/promptEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_manage_profile_prompt4" />

                <TextView
                    android:id="@+id/promptPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_manage_profile_prompt5" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contentProfileUserInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/contentProfilePrompts"
                android:paddingStart="32dp"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userInfoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_manage_profile_student_name"/>

                <TextView
                    android:id="@+id/userInfoStudentID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_manage_profile_student_number"/>

                <TextView
                    android:id="@+id/userInfoEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_manage_profile_student_email"/>

                <TextView
                    android:id="@+id/userInfoPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_manage_profile_student_phone"/>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Termsetter.TextButton.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="profileBackToAccountMenu"
            android:text="◀ Account Menu"/>

    </LinearLayout>
</ScrollView>