...
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:text="@string/header_account_management"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Termsetter.MenuButton"
            android:id="@+id/buttonManageProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:onClick="openManageProfile"
            android:text="@string/btn_account_management_manage_profile"
...
