...
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:onClick="openTimetableView"
            android:text="@string/btn_main_view_my_schedule" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/homeEnrolledClassesBtn"
            style="@style/Widget.Termsetter.MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:onClick="openTranscript"
            android:text="@string/btn_main_view_my_courses" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/homeOfferedClassesBtn"
            style="@style/Widget.Termsetter.MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:onClick="openOfferedClassesCategories"
...
