<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recycler_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <CheckBox
        android:id="@+id/course_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/background"
        android:gravity="left"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="16dp"/>


</androidx.cardview.widget.CardView>