<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".Presentation.OfferedClassesCategories">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Departments"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="Select department to view available courses."
            android:textSize="18sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewFaculties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Termsetter.TextButton.Small"
            android:id="@+id/buttonBackToMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="categoriesBackToMainMenu"
            android:text="◀ home"/>

    </LinearLayout>
</ScrollView>